added sampling to configuration, added test stubs